--- a/auth_service/templates/login.html
+++ b/auth_service/templates/login.html
@@ -19,7 +19,7 @@
             <h3>LOGIN</h3>
           </div>
           <div class="card-body">
-            <form>
+            <form method="post" action="/login">
               <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
