implemented front end of fetched data and delete, filtering and downloading features

--- a/user_service/templates/dashboard.html
+++ b/user_service/templates/dashboard.html
@@ -22,7 +22,11 @@
               <h5>Upload Files</h5>
             </div>
             <div class="card-body">
-              <form action="/upload" method="POST" enctype="multipart/form-data">
+              <form
+                action="/upload"
+                method="POST"
+                enctype="multipart/form-data"
+              >
                 <div class="form-group">
                   <input
                     type="file"
@@ -39,27 +43,94 @@
               </form>
             </div>
           </div>
+          <div class="custom-link">
+            <a href="{{url_for('logout')}}">Logout</a>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col text-center">
+                  <a
+                    href="{{url_for('setSelectedGender',gender='All')}}"
+                    class="gender {% if session['selectedGender'] == 'All' %}green{% endif %}"
+                    >All: {{session['Male']+session['Female']}}</a
+                  >
+                </div>
+                <div class="col text-center">
+                  <a
+                    href="{{url_for('setSelectedGender',gender='Male')}}"
+                    class="gender {% if session['selectedGender'] == 'Male' %}green{% endif %}"
+                    >Male: {{session['Male']}}</a
+                  >
+                </div>
+                <div class="col text-center">
+                  <a
+                    href="{{url_for('setSelectedGender',gender='Female')}}"
+                    class="gender {% if session['selectedGender'] == 'Female' %}green{% endif %}"
+                    >Female: {{session['Female']}}</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col text-center">
+                  <a
+                    href="{{url_for('download_pdf')}}"
+                    
+                    >PDF</a
+                  >
+                </div>
+                <div class="col text-center">
+                  <a
+                    href="{{url_for('download_excel')}}"
+                    
+                    >EXCEL</a
+                  >
+                </div>
+                <div class="col text-center">
+                  <a
+                    href="{{url_for('download_csv')}}"
+                    
+                    >CSV</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="table-container">
-            <table class="table ">
-                <thead>
-                    <tr>
-                        <th>NIC</th>
-                        <th>Gender</th>
-                        <th>DOB</th>
-                        <th>Age</th>
-                    </tr>
-                </thead>
-                <tbody>
-                  {% for detail in session['details'] %}
-                    <tr>
-                        <td data-label="NIC">{{ detail[0] }}</td>
-                        <td data-label="Gender">{{ detail[2] }}</td>
-                        <td data-label="DOB">{{ detail[1] }}</td>
-                        <td data-label="Age">{{ detail[3] }}</td>
-                  {% endfor %}
-                </tbody>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>NIC</th>
+                  <th>Gender</th>
+                  <th>DOB</th>
+                  <th>Age</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for detail in session['details'] %} 
+                {% if session['selectedGender'] == 'All' or detail[1] == session['selectedGender']%}
+                <tr>
+                  <td data-label="NIC">{{ detail[0] }}</td>
+                  <td data-label="Gender">{{ detail[1] }}</td>
+                  <td data-label="DOB">{{ detail[2] }}</td>
+                  <td data-label="Age">{{ detail[3] }}</td>
+                  <td>
+                    <a
+                      href="{{ url_for('delete_row', id=detail[4]) }}"
+                      class="delete-url"
+                      >Delete</a
+                    >
+                  </td>
+                </tr>
+                {% endif %} {% endfor %}
+              </tbody>
             </table>
-        </div>
+          </div>
         </div>
       </div>
     </div>
