--- a/user_service/static/styles_for_dashboard.css
+++ b/user_service/static/styles_for_dashboard.css
@@ -52,14 +52,51 @@ label{
 }
 a{
     color: black;
+    transition: 0.3s;
 }
 a:hover{
     color: black;
 }
-.table tbody tr {
+/* .table tbody tr {
     transition: background-color 0.3s ease-in-out;
+} */
+
+/* .table tbody tr:hover {
+    background-color: #d9d9d9;
+    cursor: pointer;
+} */
+.table {
+    width: 100%;
+}
+.table th, .table td {
+    
+    padding: 8px;
+    text-align: center;
+    border-right: 1px solid #ddd;
+}
+.table th:last-child, .table td:last-child {
+    border-right: none;
+}
+.table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+.table tbody tr {
+    margin-bottom: 20px;
+}
+.table tbody tr:last-child {
+    margin-bottom: 0;
+}
+.custom-link{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.table tbody tr:hover {
-    background-color: #d9d9d9;
+.delete-url:hover{
+color: #ff3838;
+}
+.green{
+    color: #4CAF50;
 }
