--- a/auth_service/static/styles.css
+++ b/auth_service/static/styles.css
@@ -3,13 +3,19 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+h5{
+    margin-top: 5px;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 550;
+}
 .card-header {
     height: 60px; /* Adjust the height as needed */
     display: flex;
     justify-content: center;
 }
 .container {
-    margin-top: 20px;
+    margin-top: 60px;
 }
 .form-control{
     border-radius: 10px;
@@ -55,6 +61,39 @@ a{
 }
 a:hover{
     color: black;
+}
+
+.flash {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+.flash {
+    position: fixed;
+    top: 8px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    width: 300px;
+    text-align: center;
+    border-radius: 10px;
+    z-index: 1000;
+    opacity: 0.7;
+}
+.flash-success {
+    background-color: #84df87;
+    color: white;
+}
+.flash-error {
+    background-color: #eb837c;
+    color: white;
+}
+.flash-close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
 }
 
 @keyframes slideInFromLeft {
