--- a/auth_service/templates/reset.html
+++ b/auth_service/templates/reset.html
@@ -27,25 +27,21 @@
       <div class="col">
         <div class="card">
           <div class="card-header">
-            <h3>LOGIN</h3>
+            <h3>Reset Password</h3>
           </div>
           <div class="card-body">
-            <form method="post" action="/login">
+            <form method="post">
               <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">New Password</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
               </div>
-              <div class="form-group custom-link">
-                <a href="{{url_for('start_reset_password')}}">Forgot password</a>
+              <div class="form-group">
+                <label for="password">Rewrite New Password</label>
+                <input type="password" class="form-control" id="password" name="password_confirm" placeholder="Enter password again" required>
               </div>
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
-              <div class="form-group custom-link">
-                <p>Don't have account? <a href="{{url_for('register')}}">Register</a></p>
-              </div>
+
+              <button type="submit" class="btn btn-primary btn-block">Reset</button>
+              
             </form>
           </div>
         </div>
