--- a/user_service/static/styles_for_dashboard.css
+++ b/user_service/static/styles_for_dashboard.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
 }
 .container {
-    margin-top: 20px;
+    margin-top: 60px;
 }
 .form-control{
     border-radius: 10px;
@@ -29,6 +29,11 @@ body {
         rgba(0, 0, 0, 0) 50%, 
         rgb(0, 0, 0) 100%) 1;
 }
+.card-custom {
+    border: 2px solid transparent;
+    border-color: #000000;
+    border-top: none; /* Remove the top border */
+}
 .card-header {
     border:none;
     background: #73bd77;
@@ -43,12 +48,14 @@ label{
     color: #000000;
 }
 .container-box{
-    min-width: 80vh;
+    width: 90%;
 }
 .custom-link{
     text-align: center;
     font-size: 15px;
     margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 a{
     color: black;
@@ -68,6 +75,7 @@ a:hover{
 .table {
     width: 100%;
 }
+
 .table th, .table td {
     
     padding: 8px;
@@ -87,16 +95,42 @@ a:hover{
 .table tbody tr:last-child {
     margin-bottom: 0;
 }
-.custom-link{
-    text-align: center;
-    font-size: 15px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
 
 .delete-url:hover{
 color: #ff3838;
 }
 .green{
     color: #4CAF50;
+}
+.flash {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+.flash {
+    position: fixed;
+    top: 8px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    width: 300px;
+    text-align: center;
+    border-radius: 10px;
+    z-index: 1000;
+    opacity: 0.7;
+}
+.flash-success {
+    background-color: #84df87;
+    color: white;
+}
+.flash-error {
+    background-color: #eb837c;
+    color: white;
+}
+.flash-close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
 }
