--- a/auth_service/static/styles.css
+++ b/auth_service/static/styles.css
@@ -1,108 +1,113 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-h5{
-    margin-top: 5px;
-    color: #ffffff;
-    font-size: 20px;
-    font-weight: 550;
+h5 {
+  margin-top: 5px;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 550;
 }
 .card-header {
-    height: 60px; /* Adjust the height as needed */
-    display: flex;
-    justify-content: center;
+  height: 60px; /* Adjust the height as needed */
+  display: flex;
+  justify-content: center;
 }
 .container {
-    margin-top: 60px;
+  margin-top: 60px;
 }
-.form-control{
-    border-radius: 10px;
-    border-color: #d9d9d9;
+.form-control {
+  border-radius: 10px;
+  border-color: #d9d9d9;
 }
-.btn-primary {
-    background-color: #73bd77;
-    border-color: #73bd77;
+.bton-primary {
+  color: white;
+  background-color: #73bd77;
+  border-color: #73bd77;
 }
-.btn-primary:hover {
-    background-color: #4CAF50;
-    border-color: #4CAF50;
+.bton-primary:hover {
+  color: white;
+  background-color: #4caf50;
+  border-color: #4caf50;
 }
 .card {
-    border: 2px solid transparent;
-    border-image: linear-gradient(to bottom,
-        rgba(0, 0, 0, 0) 50%, 
-        rgb(0, 0, 0) 100%) 1;
+  border: 2px solid transparent;
+  border-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 50%,
+      rgb(0, 0, 0) 100%
+    )
+    1;
 }
 .card-header {
-    border:none;
-    background: #73bd77;
+  border: none;
+  background: #73bd77;
 }
-h3{
-    color: #ffffff;
-    font-size: 30px;
-    font-weight: 550;
+h3 {
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 550;
 }
-label{
-    color: #000000;
+label {
+  color: #000000;
 }
-.container-box{
-    max-width: 80vh;
-    /* animation: slideInFromLeft 0.1s ease-out; */
+.container-box {
+  max-width: 80vh;
+  /* animation: slideInFromLeft 0.1s ease-out; */
 }
-.custom-link{
-    text-align: center;
-    font-size: 15px;
-    margin-top: 20px;
+.custom-link {
+  text-align: center;
+  font-size: 15px;
+  margin-top: 20px;
 }
-a{
-    color: black;
+a {
+  color: black;
 }
-a:hover{
-    color: black;
+a:hover {
+  color: black;
 }
 
 .flash {
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    text-align: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  text-align: center;
 }
 .flash {
-    position: fixed;
-    top: 8px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px;
-    width: 300px;
-    text-align: center;
-    border-radius: 10px;
-    z-index: 1000;
-    opacity: 0.7;
+  position: fixed;
+  top: 8px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  width: 300px;
+  text-align: center;
+  border-radius: 10px;
+  z-index: 1000;
+  opacity: 0.7;
 }
 .flash-success {
-    background-color: #84df87;
-    color: white;
+  background-color: #84df87;
+  color: white;
 }
 .flash-error {
-    background-color: #eb837c;
-    color: white;
+  background-color: #eb837c;
+  color: white;
 }
 .flash-close {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
 }
 
 @keyframes slideInFromLeft {
-    0% {
-        transform: translateX(-100%);
-        opacity: 0;
-    }
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
