--- a/auth_service/templates/login.html
+++ b/auth_service/templates/login.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login Form</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
     />
-</head>
-<body>
-  {% with messages = get_flashed_messages(with_categories=true) %} {% if
+  </head>
+  <body>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %}
     <div class="flash flash-{{ category }}">
       {{ message }}
@@ -22,53 +25,74 @@
       >
     </div>
     {% endfor %} {% endif %} {% endwith %}
-  <div class="container container-box">
-    <div class="row justify-content-center">
-      <div class="col">
-        <div class="card">
-          <div class="card-header">
-            <h3>LOGIN</h3>
-          </div>
-          <div class="card-body">
-            <form method="post" action="/login">
-              <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
-              </div>
-              <div class="form-group custom-link">
-                <a href="{{url_for('start_reset_password')}}">Forgot password</a>
-              </div>
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
-              <div class="form-group custom-link">
-                <p>Don't have account? <a href="{{url_for('register')}}">Register</a></p>
-              </div>
-            </form>
+    <div class="container container-box">
+      <div class="row justify-content-center">
+        <div class="col">
+          <div class="card">
+            <div class="card-header">
+              <h3>LOGIN</h3>
+            </div>
+            <div class="card-body">
+              <form method="post" action="/login">
+                <div class="form-group">
+                  <label for="username">Username</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="username"
+                    name="username"
+                    placeholder="Enter username"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    name="password"
+                    placeholder="Enter password"
+                    required
+                  />
+                </div>
+                <div class="form-group custom-link">
+                  <a href="{{url_for('start_reset_password')}}"
+                    >Forgot password</a
+                  >
+                </div>
+                <button type="submit" class="btn bton-primary btn-block">
+                  Login
+                </button>
+                <div class="form-group custom-link">
+                  <p>
+                    Don't have account?
+                    <a href="{{url_for('register')}}">Register</a>
+                  </p>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script>
-    // Wait for the DOM to be fully loaded
-    document.addEventListener('DOMContentLoaded', function() {
+    <script>
+      // Wait for the DOM to be fully loaded
+      document.addEventListener("DOMContentLoaded", function () {
         // Select all flash messages
-        const flashMessages = document.querySelectorAll('.flash');
-        
-        // Set a timeout to hide each flash message after 2 seconds
-        flashMessages.forEach(function(flashMessage) {
-            setTimeout(function() {
-                flashMessage.style.display = 'none';
-            }, 2000); // 2000 milliseconds = 2 seconds
-        });
-    });
-</script>
+        const flashMessages = document.querySelectorAll(".flash");
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+        // Set a timeout to hide each flash message after 2 seconds
+        flashMessages.forEach(function (flashMessage) {
+          setTimeout(function () {
+            flashMessage.style.display = "none";
+          }, 4000); // 4000 milliseconds = 4 seconds
+        });
+      });
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
 </html>
