--- a/user_service/static/styles_for_dashboard.css
+++ b/user_service/static/styles_for_dashboard.css
@@ -15,13 +15,15 @@ body {
     border-radius: 10px;
     border-color: #d9d9d9;
 }
-.btn-primary {
+.bton-primary {
     background-color: #73bd77;
     border-color: #73bd77;
+    color: white;
 }
-.btn-primary:hover {
+.bton-primary:hover {
     background-color: #4CAF50;
     border-color: #4CAF50;
+    color: white;
 }
 .card {
     border: 2px solid transparent;
