--- a/auth_service/static/styles.css
+++ b/auth_service/static/styles.css
@@ -76,7 +76,7 @@ a:hover {
 }
 .flash {
   position: fixed;
-  top: 8px;
+  top: 64px;
   left: 50%;
   transform: translateX(-50%);
   padding: 10px;
@@ -100,7 +100,30 @@ a:hover {
   right: 10px;
   cursor: pointer;
 }
+.navbar-custom {
+  background-color: #73bd77;/* Adjust the height as needed */
+}
 
+.navbar-custom .navbar-brand,
+.navbar-custom .nav-link {
+  color: white;
+  transition: 0.3s;
+}
+
+.navbar-custom .nav-link:hover {
+  color: #d9d9d9;
+}
+
+.navbar-custom .navbar-toggler-icon {
+  background-image: none;
+  color: white;
+}
+
+.navbar-custom .navbar-toggler-icon::before {
+  content: '\2630'; /* Unicode character for menu icon */
+  font-size: 1.5em;
+  color: white;
+}
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
