--- a/auth_service/templates/login.html
+++ b/auth_service/templates/login.html
@@ -25,6 +25,41 @@
       >
     </div>
     {% endfor %} {% endif %} {% endwith %}
+    <div class="navbar-custom">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container" style="margin-top: -1px">
+          <a class="navbar-brand" href="#">Nic Validator</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('login')}}">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('register')}}">Register</a>
+              </li>
+              {% if 'token' in request.cookies %}
+              <li class="nav-item">
+                <a class="nav-link" href="http://localhost:5001/dashboard"
+                  >Upload</a
+                >
+              </li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
     <div class="container container-box">
       <div class="row justify-content-center">
         <div class="col">
