--- a/auth_service/static/styles.css
+++ b/auth_service/static/styles.css
@@ -111,7 +111,7 @@ a:hover {
 }
 
 .navbar-custom .nav-link:hover {
-  color: #d9d9d9;
+  color: #000000;
 }
 
 .navbar-custom .navbar-toggler-icon {
