--- a/auth_service/templates/login.html
+++ b/auth_service/templates/login.html
@@ -54,6 +54,11 @@
                   >Upload</a
                 >
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="http://localhost:5001/logout"
+                  >Logout</a
+                >
+              </li>
               {% endif %}
             </ul>
           </div>
